change box sizing and fix overflow

--- a/src/app/home-page/new-dashboard/new-dashboard.component.scss
+++ b/src/app/home-page/new-dashboard/new-dashboard.component.scss
@@ -2,7 +2,7 @@
 @import '/src/materialColorScheme.scss';
 
 .entry-holder {
-  max-height: 61rem;
+  max-height: 48rem;
 }
 
 .box-container {
