--- a/src/app/home-page/widget/entry-box/entry-box.component.scss
+++ b/src/app/home-page/widget/entry-box/entry-box.component.scss
@@ -36,8 +36,9 @@
   border-bottom: solid 1px mat.get-color-from-palette($kim-gray, 3);
 }
 
-.light-text {
+.date {
   color: mat.get-color-from-palette($kim-gray, 2);
+  white-space: nowrap;
 }
 
 .mat-card-grow {
